test(FieldLanguageContractTest): 更新测试代码以使用现代Java特性
- 使用通配符导入替代具体断言方法导入
- 将 Collectors.toList() 替换为 Stream.toList() 方法
- 使用 assertInstanceOf 替代 instanceof 检查
- 添加 VectorFieldData 类型导入支持测试验证